--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,40 @@
   color: #61dafb;
 }
 
+.flex {
+  display: flex;
+}
+.mr-2 {
+  margin-right: 4px;
+}
+
+.formField {
+  margin-top: 1.25rem;
+}
+.formFieldLabel {
+  display: block;
+  font-size: medium;
+  padding-bottom: 0.25rem;
+
+}
+.formFieldTip {
+  padding-top: 0.25rem;
+}
+.formFieldTipError {
+  /* @apply text-primary */
+}
+.relative {
+  position: relative;
+}
+.items-center {
+  align-items: center;
+}
+.w-75 {
+  width: 75%;
+}
+.w-full {
+  width: 100%;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
