--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,25 @@
-.App {
-  text-align: center;
-}
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+#app {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+#app-frame {
+  position: relative;
+  overflow: hidden;
+  overflow-y: scroll;
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -47,9 +62,7 @@
 .formFieldTip {
   padding-top: 0.25rem;
 }
-.formFieldTipError {
-  /* @apply text-primary */
-}
+
 .relative {
   position: relative;
 }
@@ -62,6 +75,73 @@
 .w-full {
   width: 100%;
 }
+.navigation {
+  bottom: 0px;
+  left: 0px;
+  position: fixed;
+  top: 0px;
+  z-index: 200;
+}
+.navigation-right {
+  bottom: 0px;
+  right: 0px;
+  position: fixed;
+  top: 0px;
+  z-index: 200;
+}
+
+.modal-backdrop {
+  background: rgba(27, 31, 60, 0.54);
+  /* background: rgba(250, 250, 250, 0.8); */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+}
+
+.modal-dialog {
+  width: 30rem;
+  background: rgb(255, 255, 255);
+  /* padding: 1.5rem; */
+  /* box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05); */
+  border-radius: 0.3rem;
+  transition: 0.5s;
+  position: relative;
+  pointer-events: auto;
+}
+.modal-header {
+  padding: 0;
+}
+#register .modal-dialog {
+  /* max-height: 100%; */
+  max-width: var(--width);
+  width: 90%;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.modal-close {
+  background: none;
+  border: none;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  outline: none;
+  height: 1.2rem;
+  width: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
