--- a/src/components/shared/Button/Button.css
+++ b/src/components/shared/Button/Button.css
@@ -1,15 +1,21 @@
-.button {
-    font-size: 14.5px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    height: 2rem;
-    white-space: nowrap;
-    border-radius: 0.125rem;
-    cursor: pointer;
-    padding: 0 3rem;
+.primary,
+.success,
+.danger,
+.info,
+.warning {
+  color: white;
+  font-weight: 500;
+  background: var(--bg-variant);
 }
 
-.pl-2 {
-    padding-left: 2rem;
+.secondary {
+  background: var(--bg-variant);
+}
+.empty {
+  background: #fff;
+  outline: none;
+}
+.transparent {
+  background: #e2e8f0;
+  outline: none;
 }
