--- a/src/components/shared/Button/Button.css
+++ b/src/components/shared/Button/Button.css
@@ -19,3 +19,32 @@
   background: #e2e8f0;
   outline: none;
 }
+.secondary,
+.empty {
+  font-weight: normal;
+  color: #42526E;
+}
+.secondary:not(:disabled):hover,
+.empty:not(:disabled):hover {
+  background: bg-backgroundLight;
+}
+.secondary:not(:disabled):active,
+.empty:not(:disabled):active {
+    --tw-bg-opacity: 1;
+    background-color: rgb(210 229 254 / var(--tw-bg-opacity));
+}
+
+.button:disabled {
+  opacity: 0.5;
+  cursor: pointer;
+  pointer-events: none;
+}
+.secondary:not(:disabled):hover,
+.empty:not(:disabled):hover {
+    background-color: #ebecf0;
+}
+.secondary:not(:disabled):active,
+.empty:not(:disabled):active {
+  background-color: #D2E5FE;;
+  color: var(--primary);
+}
