--- a/src/App.css
+++ b/src/App.css
@@ -143,7 +143,6 @@
 }
 
 .card-wrap {
-  touch-action: manipulation;
   /* cursor: pointer; */
   margin-bottom: 5px;
 }
@@ -153,13 +152,13 @@
   box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 2px 0px;
   border-radius: 0.125rem;
   width: 100%;
-}
-.card:hover {
-  background-color: #ebecf0;
+  transition-property: all;
+  transition-duration: 100ms;
 }
 .cart-container {
   min-width: 240px;
 }
+
 @keyframes fadeIn {
   from {
     opacity: 0;
