--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+    .card {
+      background-color: theme('colors.white');
+      border-radius: theme('borderRadius.lg');
+      /* padding: theme('spacing.6'); */
+      box-shadow: theme('boxShadow.allSides');
+      overflow: hidden;
+    }
+}
